--- a/SSOPivotalTile/SSOWebPivotal/Web.config
+++ b/SSOPivotalTile/SSOWebPivotal/Web.config
@@ -9,9 +9,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ida:ClientId" value="X2jdBZXCogMTDY8W6XdT" />
-    <add key="ida:ClientSecret" value="fcmNQc3a9FZlfmK-7tAAJ4nj-UEG0HknQdW3eHQ3" />
-    <add key="ida:Domain" value="https://dev-816447.oktapreview.com" />
+    <add key="ida:ClientId" value="#{ClientId}#" />
+    <add key="ida:ClientSecret" value="#{ClientSecret}#" />
+    <add key="ida:Domain" value="#{AuthDomain}#" />
     <add key="ida:RedirectUri" value="https://localhost:44316/" />
   </appSettings>
   <system.web>
